# MagneticTest

./: .gitignore  CMakeLists.txt  README.md
include/test/: renderer.h
include/test/collections/: DynamicArray.h  dynamicArray.h
include/test/graphics/: Camera.h  Color.h  MagneticFieldRenderer.h  RenderContext.h  RenderEngine.h  magneticFieldRenderer.h  renderContext.h
include/test/math/: MathFunctions.h  Vector.h  functions.h  vector.h
include/test/physics/: electromagnetism.h
include/test/tools/: RenderTools.h  TimeTools.h  timeTools.h
src/: main.c  renderer.c
src/collections/: DynamicArray.c
src/graphics/: Color.c  MagneticFieldRenderer.c  RenderEngine.c  magneticFieldRenderer.c  renderEngine.c
src/math/: Vector.c
src/physics/: electromagnetism.c
src/tools/: RenderTools.c  TimeTools.c
test/: main.cpp
test/math/: MathFunctions.cpp  Vector.cpp
test/test/math/: functions.cpp  vector.cpp
